src/Generated/ParMacchiato.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParMacchiato.y
-----------------------------------------------------------------------------

state 11 contains 1 shift/reduce conflicts.
state 136 contains 1 shift/reduce conflicts.

rule 42 is unused
rule 43 is unused
rule 44 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	String -> L_quoted                                 (2)
	UIdent -> L_UIdent                                 (3)
	Program -> ListFnDef                               (4)
	FnDef -> Type UIdent '(' ListArg ')' Block         (5)
	ListFnDef -> FnDef                                 (6)
	ListFnDef -> FnDef ListFnDef                       (7)
	Arg -> Type UIdent                                 (8)
	Arg -> Type '&' UIdent                             (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> ';'                                        (16)
	Stmt -> Block                                      (17)
	Stmt -> FnDef                                      (18)
	Stmt -> Type ListItem ';'                          (19)
	Stmt -> UIdent '=' Expr ';'                        (20)
	Stmt -> UIdent ListDimAcc '=' Expr ';'             (21)
	Stmt -> 'return' Expr ';'                          (22)
	Stmt -> 'if' '(' Expr ')' Stmt                     (23)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (24)
	Stmt -> 'while' '(' Expr ')' Stmt                  (25)
	Stmt -> Expr ';'                                   (26)
	Stmt -> 'print' ListPrintParam ';'                 (27)
	Item -> UIdent                                     (28)
	Item -> UIdent '=' Expr                            (29)
	ListItem -> Item                                   (30)
	ListItem -> Item ',' ListItem                      (31)
	PrintParam -> '<<' Expr                            (32)
	ListPrintParam -> PrintParam                       (33)
	ListPrintParam -> PrintParam ListPrintParam        (34)
	Type -> 'int'                                      (35)
	Type -> 'string'                                   (36)
	Type -> 'bool'                                     (37)
	Type -> Type ListDimBra                            (38)
	DimBra -> '[]'                                     (39)
	ListDimBra -> DimBra                               (40)
	ListDimBra -> DimBra ListDimBra                    (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	Expr6 -> UIdent                                    (45)
	Expr6 -> 'new' Type ListDimAcc ListDimBra          (46)
	Expr6 -> UIdent ListDimAcc                         (47)
	Expr6 -> UIdent '::' KeyWord                       (48)
	Expr6 -> UIdent ListDimAcc '::' KeyWord            (49)
	Expr6 -> Integer                                   (50)
	Expr6 -> 'true'                                    (51)
	Expr6 -> 'false'                                   (52)
	Expr6 -> UIdent '(' ListExpr ')'                   (53)
	Expr6 -> String                                    (54)
	Expr6 -> '(' Expr ')'                              (55)
	DimAcc -> '[' Expr6 ']'                            (56)
	ListDimAcc -> DimAcc                               (57)
	ListDimAcc -> DimAcc ListDimAcc                    (58)
	KeyWord -> 'LENGTH'                                (59)
	KeyWord -> 'MAX_VAL'                               (60)
	Expr5 -> '-' Expr6                                 (61)
	Expr5 -> '!' Expr6                                 (62)
	Expr5 -> Expr6                                     (63)
	Expr4 -> Expr4 MulOp Expr5                         (64)
	Expr4 -> Expr5                                     (65)
	Expr3 -> Expr3 AddOp Expr4                         (66)
	Expr3 -> Expr4                                     (67)
	Expr2 -> Expr2 RelOp Expr3                         (68)
	Expr2 -> Expr3                                     (69)
	Expr1 -> Expr2 '&&' Expr1                          (70)
	Expr1 -> Expr2                                     (71)
	Expr -> Expr1 '||' Expr                            (72)
	Expr -> Expr1                                      (73)
	ListExpr ->                                        (74)
	ListExpr -> Expr                                   (75)
	ListExpr -> Expr ',' ListExpr                      (76)
	AddOp -> '+'                                       (77)
	AddOp -> '-'                                       (78)
	MulOp -> '*'                                       (79)
	MulOp -> '/'                                       (80)
	MulOp -> '%'                                       (81)
	RelOp -> '<'                                       (82)
	RelOp -> '<='                                      (83)
	RelOp -> '>'                                       (84)
	RelOp -> '>='                                      (85)
	RelOp -> '=='                                      (86)
	RelOp -> '!='                                      (87)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	'::'           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<<'           { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'LENGTH'       { PT _ (TS _ 22) }
	'MAX_VAL'      { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	'[]'           { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'new'          { PT _ (TS _ 32) }
	'print'        { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_UIdent       { PT _ (T_UIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	String          rule  2
	UIdent          rule  3
	Program         rule  4
	FnDef           rule  5
	ListFnDef       rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27
	Item            rules 28, 29
	ListItem        rules 30, 31
	PrintParam      rule  32
	ListPrintParam  rules 33, 34
	Type            rules 35, 36, 37, 38
	DimBra          rule  39
	ListDimBra      rules 40, 41
	ListType        rules 42, 43, 44
	Expr6           rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55
	DimAcc          rule  56
	ListDimAcc      rules 57, 58
	KeyWord         rules 59, 60
	Expr5           rules 61, 62, 63
	Expr4           rules 64, 65
	Expr3           rules 66, 67
	Expr2           rules 68, 69
	Expr1           rules 70, 71
	Expr            rules 72, 73
	ListExpr        rules 74, 75, 76
	AddOp           rules 77, 78
	MulOp           rules 79, 80, 81
	RelOp           rules 82, 83, 84, 85, 86, 87

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Program        goto state 3
	FnDef          goto state 4
	ListFnDef      goto state 5
	Type           goto state 6

State 1

	Integer -> . L_integ                                (rule 1)

	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<<'           reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListFnDef -> FnDef .                                (rule 6)
	ListFnDef -> FnDef . ListFnDef                      (rule 7)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	%eof           reduce using rule 6

	FnDef          goto state 4
	ListFnDef      goto state 15
	Type           goto state 6

State 5

	Program -> ListFnDef .                              (rule 4)

	%eof           reduce using rule 4


State 6

	FnDef -> Type . UIdent '(' ListArg ')' Block        (rule 5)
	Type -> Type . ListDimBra                           (rule 38)

	'[]'           shift, and enter state 13
	L_UIdent       shift, and enter state 14

	UIdent         goto state 10
	DimBra         goto state 11
	ListDimBra     goto state 12

State 7

	Type -> 'bool' .                                    (rule 37)

	'&'            reduce using rule 37
	'['            reduce using rule 37
	'[]'           reduce using rule 37
	L_UIdent       reduce using rule 37


State 8

	Type -> 'int' .                                     (rule 35)

	'&'            reduce using rule 35
	'['            reduce using rule 35
	'[]'           reduce using rule 35
	L_UIdent       reduce using rule 35


State 9

	Type -> 'string' .                                  (rule 36)

	'&'            reduce using rule 36
	'['            reduce using rule 36
	'[]'           reduce using rule 36
	L_UIdent       reduce using rule 36


State 10

	FnDef -> Type UIdent . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 17


State 11

	ListDimBra -> DimBra .                              (rule 40)
	ListDimBra -> DimBra . ListDimBra                   (rule 41)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<<'           reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           shift, and enter state 13
			(reduce using rule 40)

	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_UIdent       reduce using rule 40

	DimBra         goto state 11
	ListDimBra     goto state 16

State 12

	Type -> Type ListDimBra .                           (rule 38)

	'&'            reduce using rule 38
	'['            reduce using rule 38
	'[]'           reduce using rule 38
	L_UIdent       reduce using rule 38


State 13

	DimBra -> '[]' .                                    (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<<'           reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            reduce using rule 39
	'[]'           reduce using rule 39
	']'            reduce using rule 39
	'||'           reduce using rule 39
	L_UIdent       reduce using rule 39


State 14

	UIdent -> L_UIdent .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'::'           reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<<'           reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'['            reduce using rule 3
	']'            reduce using rule 3
	'||'           reduce using rule 3


State 15

	ListFnDef -> FnDef ListFnDef .                      (rule 7)

	%eof           reduce using rule 7


State 16

	ListDimBra -> DimBra ListDimBra .                   (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<<'           reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_UIdent       reduce using rule 41


State 17

	FnDef -> Type UIdent '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Arg            goto state 18
	ListArg        goto state 19
	Type           goto state 20

State 18

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 24


State 19

	FnDef -> Type UIdent '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 23


State 20

	Arg -> Type . UIdent                                (rule 8)
	Arg -> Type . '&' UIdent                            (rule 9)
	Type -> Type . ListDimBra                           (rule 38)

	'&'            shift, and enter state 22
	'[]'           shift, and enter state 13
	L_UIdent       shift, and enter state 14

	UIdent         goto state 21
	DimBra         goto state 11
	ListDimBra     goto state 12

State 21

	Arg -> Type UIdent .                                (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 22

	Arg -> Type '&' . UIdent                            (rule 9)

	L_UIdent       shift, and enter state 14

	UIdent         goto state 28

State 23

	FnDef -> Type UIdent '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 27

	Block          goto state 26

State 24

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Arg            goto state 18
	ListArg        goto state 25
	Type           goto state 20

State 25

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12


State 26

	FnDef -> Type UIdent '(' ListArg ')' Block .        (rule 5)

	'!'            reduce using rule 5
	'('            reduce using rule 5
	'-'            reduce using rule 5
	';'            reduce using rule 5
	'bool'         reduce using rule 5
	'else'         reduce using rule 5
	'false'        reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'new'          reduce using rule 5
	'print'        reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'true'         reduce using rule 5
	'while'        reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	L_UIdent       reduce using rule 5
	%eof           reduce using rule 5


State 27

	Block -> '{' . ListStmt '}'                         (rule 13)

	'!'            shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	';'            shift, and enter state 47
	'bool'         shift, and enter state 7
	'false'        shift, and enter state 48
	'if'           shift, and enter state 49
	'int'          shift, and enter state 8
	'new'          shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'string'       shift, and enter state 9
	'true'         shift, and enter state 53
	'while'        shift, and enter state 54
	'{'            shift, and enter state 27
	'}'            reduce using rule 14
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 31
	FnDef          goto state 32
	Block          goto state 33
	ListStmt       goto state 34
	Stmt           goto state 35
	Type           goto state 36
	Expr6          goto state 37
	Expr5          goto state 38
	Expr4          goto state 39
	Expr3          goto state 40
	Expr2          goto state 41
	Expr1          goto state 42
	Expr           goto state 43

State 28

	Arg -> Type '&' UIdent .                            (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 29

	Expr6 -> Integer .                                  (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<<'           reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'||'           reduce using rule 50


State 30

	Expr6 -> String .                                   (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<<'           reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'||'           reduce using rule 54


State 31

	Stmt -> UIdent . '=' Expr ';'                       (rule 20)
	Stmt -> UIdent . ListDimAcc '=' Expr ';'            (rule 21)
	Expr6 -> UIdent .                                   (rule 45)
	Expr6 -> UIdent . ListDimAcc                        (rule 47)
	Expr6 -> UIdent . '::' KeyWord                      (rule 48)
	Expr6 -> UIdent . ListDimAcc '::' KeyWord           (rule 49)
	Expr6 -> UIdent . '(' ListExpr ')'                  (rule 53)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	'('            shift, and enter state 91
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	'::'           shift, and enter state 92
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'='            shift, and enter state 93
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            shift, and enter state 94
	'||'           reduce using rule 45

	DimAcc         goto state 89
	ListDimAcc     goto state 90

State 32

	Stmt -> FnDef .                                     (rule 18)

	'!'            reduce using rule 18
	'('            reduce using rule 18
	'-'            reduce using rule 18
	';'            reduce using rule 18
	'bool'         reduce using rule 18
	'else'         reduce using rule 18
	'false'        reduce using rule 18
	'if'           reduce using rule 18
	'int'          reduce using rule 18
	'new'          reduce using rule 18
	'print'        reduce using rule 18
	'return'       reduce using rule 18
	'string'       reduce using rule 18
	'true'         reduce using rule 18
	'while'        reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	L_integ        reduce using rule 18
	L_quoted       reduce using rule 18
	L_UIdent       reduce using rule 18


State 33

	Stmt -> Block .                                     (rule 17)

	'!'            reduce using rule 17
	'('            reduce using rule 17
	'-'            reduce using rule 17
	';'            reduce using rule 17
	'bool'         reduce using rule 17
	'else'         reduce using rule 17
	'false'        reduce using rule 17
	'if'           reduce using rule 17
	'int'          reduce using rule 17
	'new'          reduce using rule 17
	'print'        reduce using rule 17
	'return'       reduce using rule 17
	'string'       reduce using rule 17
	'true'         reduce using rule 17
	'while'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17
	L_UIdent       reduce using rule 17


State 34

	Block -> '{' ListStmt . '}'                         (rule 13)

	'}'            shift, and enter state 88


State 35

	ListStmt -> Stmt . ListStmt                         (rule 15)

	'!'            shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	';'            shift, and enter state 47
	'bool'         shift, and enter state 7
	'false'        shift, and enter state 48
	'if'           shift, and enter state 49
	'int'          shift, and enter state 8
	'new'          shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'string'       shift, and enter state 9
	'true'         shift, and enter state 53
	'while'        shift, and enter state 54
	'{'            shift, and enter state 27
	'}'            reduce using rule 14
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 31
	FnDef          goto state 32
	Block          goto state 33
	ListStmt       goto state 87
	Stmt           goto state 35
	Type           goto state 36
	Expr6          goto state 37
	Expr5          goto state 38
	Expr4          goto state 39
	Expr3          goto state 40
	Expr2          goto state 41
	Expr1          goto state 42
	Expr           goto state 43

State 36

	FnDef -> Type . UIdent '(' ListArg ')' Block        (rule 5)
	Stmt -> Type . ListItem ';'                         (rule 19)
	Type -> Type . ListDimBra                           (rule 38)

	'[]'           shift, and enter state 13
	L_UIdent       shift, and enter state 14

	UIdent         goto state 84
	Item           goto state 85
	ListItem       goto state 86
	DimBra         goto state 11
	ListDimBra     goto state 12

State 37

	Expr5 -> Expr6 .                                    (rule 63)

	'!='           reduce using rule 63
	'%'            reduce using rule 63
	'&&'           reduce using rule 63
	')'            reduce using rule 63
	'*'            reduce using rule 63
	'+'            reduce using rule 63
	','            reduce using rule 63
	'-'            reduce using rule 63
	'/'            reduce using rule 63
	';'            reduce using rule 63
	'<'            reduce using rule 63
	'<<'           reduce using rule 63
	'<='           reduce using rule 63
	'=='           reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	'||'           reduce using rule 63


State 38

	Expr4 -> Expr5 .                                    (rule 65)

	'!='           reduce using rule 65
	'%'            reduce using rule 65
	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'/'            reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<<'           reduce using rule 65
	'<='           reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'||'           reduce using rule 65


State 39

	Expr4 -> Expr4 . MulOp Expr5                        (rule 64)
	Expr3 -> Expr4 .                                    (rule 67)

	'!='           reduce using rule 67
	'%'            shift, and enter state 81
	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'*'            shift, and enter state 82
	'+'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'/'            shift, and enter state 83
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<<'           reduce using rule 67
	'<='           reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	'||'           reduce using rule 67

	MulOp          goto state 80

State 40

	Expr3 -> Expr3 . AddOp Expr4                        (rule 66)
	Expr2 -> Expr3 .                                    (rule 69)

	'!='           reduce using rule 69
	'&&'           reduce using rule 69
	')'            reduce using rule 69
	'+'            shift, and enter state 78
	','            reduce using rule 69
	'-'            shift, and enter state 79
	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<<'           reduce using rule 69
	'<='           reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'||'           reduce using rule 69

	AddOp          goto state 77

State 41

	Expr2 -> Expr2 . RelOp Expr3                        (rule 68)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 70)
	Expr1 -> Expr2 .                                    (rule 71)

	'!='           shift, and enter state 70
	'&&'           shift, and enter state 71
	')'            reduce using rule 71
	','            reduce using rule 71
	';'            reduce using rule 71
	'<'            shift, and enter state 72
	'<<'           reduce using rule 71
	'<='           shift, and enter state 73
	'=='           shift, and enter state 74
	'>'            shift, and enter state 75
	'>='           shift, and enter state 76
	'||'           reduce using rule 71

	RelOp          goto state 69

State 42

	Expr -> Expr1 . '||' Expr                           (rule 72)
	Expr -> Expr1 .                                     (rule 73)

	')'            reduce using rule 73
	','            reduce using rule 73
	';'            reduce using rule 73
	'<<'           reduce using rule 73
	'||'           shift, and enter state 68


State 43

	Stmt -> Expr . ';'                                  (rule 26)

	';'            shift, and enter state 67


State 44

	Expr5 -> '!' . Expr6                                (rule 62)

	'('            shift, and enter state 45
	'false'        shift, and enter state 48
	'new'          shift, and enter state 50
	'true'         shift, and enter state 53
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 57
	Expr6          goto state 66

State 45

	Expr6 -> '(' . Expr ')'                             (rule 55)

	'!'            shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	'false'        shift, and enter state 48
	'new'          shift, and enter state 50
	'true'         shift, and enter state 53
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 57
	Expr6          goto state 37
	Expr5          goto state 38
	Expr4          goto state 39
	Expr3          goto state 40
	Expr2          goto state 41
	Expr1          goto state 42
	Expr           goto state 65

State 46

	Expr5 -> '-' . Expr6                                (rule 61)

	'('            shift, and enter state 45
	'false'        shift, and enter state 48
	'new'          shift, and enter state 50
	'true'         shift, and enter state 53
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 57
	Expr6          goto state 64

State 47

	Stmt -> ';' .                                       (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'bool'         reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'new'          reduce using rule 16
	'print'        reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'true'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16
	L_UIdent       reduce using rule 16


State 48

	Expr6 -> 'false' .                                  (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<<'           reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'||'           reduce using rule 52


State 49

	Stmt -> 'if' . '(' Expr ')' Stmt                    (rule 23)
	Stmt -> 'if' . '(' Expr ')' Stmt 'else' Stmt        (rule 24)

	'('            shift, and enter state 63


State 50

	Expr6 -> 'new' . Type ListDimAcc ListDimBra         (rule 46)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Type           goto state 62

State 51

	Stmt -> 'print' . ListPrintParam ';'                (rule 27)

	'<<'           shift, and enter state 61

	PrintParam     goto state 59
	ListPrintParam goto state 60

State 52

	Stmt -> 'return' . Expr ';'                         (rule 22)

	'!'            shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	'false'        shift, and enter state 48
	'new'          shift, and enter state 50
	'true'         shift, and enter state 53
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 57
	Expr6          goto state 37
	Expr5          goto state 38
	Expr4          goto state 39
	Expr3          goto state 40
	Expr2          goto state 41
	Expr1          goto state 42
	Expr           goto state 58

State 53

	Expr6 -> 'true' .                                   (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<<'           reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	']'            reduce using rule 51
	'||'           reduce using rule 51


State 54

	Stmt -> 'while' . '(' Expr ')' Stmt                 (rule 25)

	'('            shift, and enter state 56


State 55

	String -> L_quoted .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<<'           reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'||'           reduce using rule 2


State 56

	Stmt -> 'while' '(' . Expr ')' Stmt                 (rule 25)

	'!'            shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	'false'        shift, and enter state 48
	'new'          shift, and enter state 50
	'true'         shift, and enter state 53
	L_integ        shift, and enter state 2
	L_quoted       shift, and enter state 55
	L_UIdent       shift, and enter state 14

	Integer        goto state 29
	String         goto state 30
	UIdent         goto state 57
	Expr6          goto state 37
	Expr5          goto state 38
	Expr4          goto state 39
	Expr3          goto state 40
	Expr2          goto state 41
	Expr1          goto state 42
	Expr           goto state 121

State 57

	Expr6 -> UIdent .                                   (rule 45)
	Expr6 -> UIdent . ListDimAcc                        (rule 47)
	Expr6 -> UIdent . '::' KeyWord                      (rule 48)
	Expr6 -> UIdent . ListDimAcc '::' KeyWord           (rule 49)
	Expr6 -> UIdent . '(' ListExpr ')'                  (rule 53)
